<resources>
    <string name="app_name">Calculatrice Windows</string>
    <string name="plus">+</string>
    <string name="moins">—</string>
    <string name="diviseur">÷</string>
    <string name="fois">×</string>
    <string name="plusoumoins">±</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="retour">\u232b</string>
    <string name="egal">=</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="virgule">.</string>
    <string name="btnHexa">HEX</string>
    <string name="btnBinaire">BIN</string>
    <string name="btnDecimal">DEC</string>
</resources>
