<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:weightSum="16"
    android:background="@color/colorGrey"
    tools:context=".CalculatriceActivity">
        <TextView
            android:id="@+id/historique"
            android:text="0"
            android:textAlignment="gravity"
            android:gravity="right|center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:textSize="10pt"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:radius="5dip"
            android:textColor="#000000"
            android:background="@drawable/back"/>
        <FrameLayout
            android:id="@+id/fragment_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:background="@drawable/back"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="6">
        <Button
            android:id="@+id/hexa"
            android:onClick="buttonHexa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="10pt"
            android:text="@string/btnHexa"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/binaire"
            android:onClick="buttonBinaire"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="10pt"
            android:text="@string/btnBinaire"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/decimal"
            android:onClick="buttonDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="10pt"
            android:text="@string/btnDecimal"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/b_ce"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:text="@string/ce"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_c"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:text="@string/c"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_retour"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:text="@string/retour"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
        <!--<ImageButton
            android:id="@+id/b_efface"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="10pt"
            android:layout_weight="1"
            android:src="@drawable/ic_backspace_black_24dp"
            android:background="?android:attr/selectableItemBackground"/>-->
        <Button
            android:id="@+id/b_division"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="10pt"
            android:layout_weight="1"
            android:text="@string/diviseur"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/b7"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/sept"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b8"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/huit"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b9"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/neuf"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_fois"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:text="@string/fois"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/b4"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/quatre"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b5"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/cinq"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b6"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/six"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_moins"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/moins"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/b1"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/un"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b2"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/deux"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b3"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/trois"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_plus"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:text="@string/plus"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/b_plusmoins"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:textStyle="normal"
            android:text="@string/plusoumoins"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b0"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="12pt"
            android:textStyle="bold"
            android:text="@string/zero"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_virgule"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:textStyle="normal"
            android:text="@string/virgule"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/b_egal"
            android:onClick="buttonOnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="10pt"
            android:text="@string/egal"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>
